--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chart.js": "2.9.3",
     "core-js": "3.6.5",
     "flatpickr": "4.6.3",
+    "jquery": "^3.5.1",
     "nouislider": "14.6.0",
     "register-service-worker": "1.7.1",
     "vue": "2.6.11",
@@ -24,6 +25,7 @@
     "vue2-transitions": "0.3.0"
   },
   "devDependencies": {
+    "@babel/helper-member-expression-to-functions": "^7.12.7",
     "@vue/cli-plugin-babel": "^4.4.6",
     "@vue/cli-plugin-eslint": "^4.4.6",
     "@vue/cli-plugin-pwa": "^4.4.6",
