--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@meforma/vue-toaster": "^1.1.1",
+    "axios": "^0.21.1",
     "bootstrap": "4.5.0",
     "bootstrap-vue": "2.15.0",
     "chart.js": "2.9.3",
@@ -17,9 +19,11 @@
     "jquery": "^3.5.1",
     "nouislider": "14.6.0",
     "register-service-worker": "1.7.1",
+    "stylus": "^0.54.8",
+    "stylus-loader": "^3.0.2",
     "vue": "2.6.11",
     "vue-chartjs": "3.5.0",
-    "vue-clipboard2": "0.3.1",
+    "vue-clipboard2": "^0.3.1",
     "vue-flatpickr-component": "8.1.5",
     "vue-router": "3.3.4",
     "vue2-transitions": "0.3.0"
